--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -1,22 +1,37 @@
 //apple
-//定位相关
-USER-AGENT,com.apple.geod*,DIRECT
-USER-AGENT,com.apple.Maps,DIRECT
-USER-AGENT,FindMyFriends*,DIRECT
-USER-AGENT,FindMyiPhone*,DIRECT
-USER-AGENT,FMDClient*,DIRECT
-USER-AGENT,FMFD*,DIRECT
-USER-AGENT,fmflocatord*,DIRECT
-USER-AGENT,geod*,DIRECT
-USER-AGENT,locationd*,DIRECT
-USER-AGENT,Maps*,DIRECT
+USER-AGENT *com.apple.mobileme.fmip1,DIRECT
+USER-AGENT *WeatherFoundation*,DIRECT
+USER-AGENT %E5%9C%B0%E5%9B%BE*,DIRECT
+USER-AGENT %E8%AE%BE%E7%BD%AE*,DIRECT
+USER-AGENT com.apple.geod*,DIRECT
+USER-AGENT com.apple.Maps,DIRECT
+USER-AGENT FindMyFriends*,DIRECT
+USER-AGENT FindMyiPhone*,DIRECT
+USER-AGENT FMDClient*,DIRECT
+USER-AGENT FMFD*,DIRECT
+USER-AGENT fmflocatord*,DIRECT
+USER-AGENT geod*,DIRECT
+USER-AGENT locationd*,DIRECT
+USER-AGENT Maps*,DIRECT
+DOMAIN api.smoot.apple.com,DIRECT
+DOMAIN captive.apple.com,DIRECT
+DOMAIN configuration.apple.com,DIRECT
+DOMAIN guzzoni.apple.com,DIRECT
+DOMAIN smp-device-content.apple.com,DIRECT
+DOMAIN xp.apple.com,DIRECT
+DOMAIN-SUFFIX ess.apple.com,DIRECT
+DOMAIN-SUFFIX push-apple.com.akadns.net,DIRECT
+DOMAIN-SUFFIX push.apple.com,DIRECT
+DOMAIN aod.itunes.apple.com,DIRECT
+DOMAIN mesu.apple.com,DIRECT
+DOMAIN api.smoot.apple.cn,DIRECT
+DOMAIN gs-loc.apple.com,DIRECT
+DOMAIN mvod.itunes.apple.com,DIRECT
+DOMAIN streamingaudio.itunes.apple.com,DIRECT
+DOMAIN-SUFFIX lcdn-locator.apple.com,DIRECT
+DOMAIN-SUFFIX lcdn-registration.apple.com,DIRECT
+DOMAIN-SUFFIX ls.apple.com,DIRECT
 
-//支付相关
-USER-AGENT,*Passbook*,DIRECT
-USER-AGENT,passd*,DIRECT
-USER-AGENT,seld*,DIRECT
-USER-AGENT,trustd*,DIRECT
-USER-AGENT,Wallet/1.0*,DIRECT
 
 //Siri
 USER-AGENT,*AssistantServices*,DIRECT
@@ -24,17 +39,6 @@ USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
 
-DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN,captive.apple.com,DIRECT
-DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
-DOMAIN,smp-device.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,sp.itunes.apple.com,DIRECT
-DOMAIN-SUFFIX,ess.apple.com,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
-DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 
 # > Exclusions
@@ -46,13 +50,41 @@ DOMAIN-SUFFIX,goodreads.com,PROXY
 
 
 
+#reject
+DOMAIN,c.isdspeed.qq.com,REJECT
+DOMAIN-SUFFIX,51la.net,REJECT
+DOMAIN,cig.com.cn,REJECT
+DOMAIN,ta.trs.cn,REJECT
+
+DOMAIN,tcss.qq.com,REJECT
+DOMAIN,tingyun.com,REJECT
+
+DOMAIN,api.share.mob.com,REJECT
+
+DOMAIN,gsp0.baidu.com,REJECT
+DOMAIN,caclick.baidu.com,REJECT
+DOMAIN,publish-pic-cpu.baidu.com,REJECT
+DOMAIN-SUFFIX,sofire.baidu.com,REJECT
+DOMAIN-SUFFIX,baifubao.com,REJECT
+DOMAIN,biaozhu.baidu.com,REJECT
+DOMAIN-SUFFIX,pingma.qq.com,REJECT
+DOMAIN,loc.map.baidu.com,REJECT
+DOMAIN-SUFFIX,nuomi.com,REJECT
+
+DOMAIN,logs.amap.com,REJECT
+DOMAIN,stats.jpush.cn,REJECT
+DOMAIN,wx.hfxing.cn,REJECT
+DOMAIN,ali-stats.jpush.cn,REJECT
+DOMAIN,experiment.appadhoc.com,REJECT
+
 # > KFC
+DOMAIN,tracker.appadhoc.com,REJECT
 DOMAIN,fp.hwwt8.com,REJECT
 DOMAIN,trackingprd.hwwt8.com,REJECT
 
 DOMAIN-SUFFIX,appbaqend.com,REJECT
+DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
-DOMAIN,g-assets.daily.taobao.net,REJECT
 
 # > 高德
 DOMAIN,aoscdn.amap.com,REJECT
@@ -61,89 +93,45 @@ DOMAIN,sync.amap.com,REJECT
 DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
-DOMAIN-SUFFIX,ac.mmstat.com,REJECT
-DOMAIN-SUFFIX,go.mmstat.com,REJECT
-DOMAIN-SUFFIX,gxb.mmstat.com,REJECT
-DOMAIN-SUFFIX,hz.mmstat.com,REJECT
-DOMAIN-SUFFIX,p3p.mmstat.com,REJECT
-DOMAIN-SUFFIX,res.mmstat.com,REJECT
-DOMAIN-SUFFIX,yt.mmstat.com,REJECT
+
 DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
-DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
 
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
+DOMAIN,x.appbaqend.com,REJECT
 DOMAIN-SUFFIX,inner-active.mobi,REJECT
 DOMAIN-SUFFIX,applovin.com,REJECT
 DOMAIN,union.uc.cn,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
-
-
+# > WPS
+DOMAIN,img.auction-ads.wpscdn.cn,REJECT
+DOMAIN,ad-stat.ksosoft.com,REJECT
+DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
+USER-AGENT,wpsoffice*,REJECT
 
 # Advertising Block 去广告以及隐私追踪保护
-# > Exclusions
-DOMAIN,analytics.google.com,PROXY
-DOMAIN,analyticsinsights-pa.googleapis.com,PROXY
-DOMAIN,analyticsreporting.googleapis.com,PROXY
-DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
+
 # > General
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
-DOMAIN-KEYWORD,trace,REJECT
-DOMAIN-KEYWORD,traffic,REJECT
-DOMAIN-KEYWORD,usage,REJECT
-DOMAIN-KEYWORD,openx,REJECT
-DOMAIN-KEYWORD,admob,REJECT
-DOMAIN-KEYWORD,qtmojo,REJECT
 
-DOMAIN-SUFFIX,3lift.com,REJECT
-DOMAIN-SUFFIX,4006825178.com,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
-DOMAIN-SUFFIX,550tg.com,REJECT
-DOMAIN-SUFFIX,56txs4.com,REJECT
-DOMAIN-SUFFIX,ad373.com,REJECT
-DOMAIN-SUFFIX,ad4screen.com,REJECT
-DOMAIN-SUFFIX,ad-brix.com,REJECT
-DOMAIN-SUFFIX,adcolony.com,REJECT
 DOMAIN-SUFFIX,adform.net,REJECT
-DOMAIN-SUFFIX,adinall.com,REJECT
-DOMAIN-SUFFIX,adinfuse.com,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
 DOMAIN-SUFFIX,adjust.io,REJECT
-DOMAIN-SUFFIX,adkmob.com,REJECT
-DOMAIN-SUFFIX,adlefee.com,REJECT
 DOMAIN-SUFFIX,admantx.com,REJECT
-DOMAIN-SUFFIX,admarketplace.net,REJECT
-DOMAIN-SUFFIX,admarvel.com,REJECT
 DOMAIN-SUFFIX,admaster.com.cn,REJECT
-DOMAIN-SUFFIX,adnow.com,REJECT
-DOMAIN-SUFFIX,adnxs.com,REJECT
-DOMAIN-SUFFIX,adsafeprotected.com,REJECT
-DOMAIN-SUFFIX,adsota.com,REJECT
-DOMAIN-SUFFIX,ads-pixiv.net,REJECT
-DOMAIN-SUFFIX,adsrvr.org,REJECT
-DOMAIN-SUFFIX,ads-twitter.com,REJECT
+DOMAIN-SUFFIX,ib.adnxs.com,REJECT
 DOMAIN-SUFFIX,adswizz.com,REJECT
 DOMAIN-SUFFIX,adsymptotic.com,REJECT
-DOMAIN-SUFFIX,adtechus.com,REJECT
-DOMAIN-SUFFIX,adtilt.com,REJECT
-DOMAIN-SUFFIX,adtrue.com,REJECT
+DOMAIN-SUFFIX,adtarget.tech,REJECT
 DOMAIN-SUFFIX,advertising.com,REJECT
-DOMAIN-SUFFIX,advertnative.com,REJECT
-DOMAIN-SUFFIX,adview.cn,REJECT
-DOMAIN-SUFFIX,adxpansion.com,REJECT
 DOMAIN-SUFFIX,adxvip.com,REJECT
-DOMAIN-SUFFIX,aerserv.com,REJECT
 DOMAIN-SUFFIX,agkn.com,REJECT
-DOMAIN-SUFFIX,alipaylog.com,REJECT
-DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
-DOMAIN-SUFFIX,analysys.cn,REJECT
-DOMAIN-SUFFIX,app-adforce.jp,REJECT
-DOMAIN-SUFFIX,appads.com,REJECT
-DOMAIN-SUFFIX,appboy.com,REJECT
+DOMAIN-SUFFIX,appboycdn.com,REJECT
 DOMAIN-SUFFIX,appier.net,REJECT
 DOMAIN-SUFFIX,applift.com,REJECT
 DOMAIN-SUFFIX,applovin.com,REJECT
@@ -151,6 +139,7 @@ DOMAIN-SUFFIX,appnext.com,REJECT
 DOMAIN-SUFFIX,appodealx.com,REJECT
 DOMAIN-SUFFIX,appsee.com,REJECT
 DOMAIN-SUFFIX,appsflyer.com,REJECT
+DOMAIN-SUFFIX,apptap.com,REJECT
 DOMAIN-SUFFIX,apptentive.com,REJECT
 DOMAIN-SUFFIX,apptornado.com,REJECT
 DOMAIN-SUFFIX,atdmt.com,REJECT
@@ -192,7 +181,9 @@ DOMAIN-SUFFIX,exponential.com,REJECT
 DOMAIN-SUFFIX,exposebox.com,REJECT
 DOMAIN-SUFFIX,eyeota.net,REJECT
 DOMAIN-SUFFIX,eyeviewads.com,REJECT
+DOMAIN-SUFFIX,fastredirecting.com,REJECT
 DOMAIN-SUFFIX,flurry.com,REJECT
+DOMAIN-SUFFIX,fuse-ad.com,REJECT
 DOMAIN-SUFFIX,fwmrm.net,REJECT
 DOMAIN-SUFFIX,getrockerbox.com,REJECT
 DOMAIN-SUFFIX,go2cloud.org,REJECT
@@ -200,6 +191,8 @@ DOMAIN-SUFFIX,go-mpulse.net,REJECT
 DOMAIN-SUFFIX,gowadogo.com,REJECT
 DOMAIN-SUFFIX,growingio.com,REJECT
 DOMAIN-SUFFIX,gwallet.com,REJECT
+DOMAIN-SUFFIX,hopemobi.net,REJECT
+DOMAIN-SUFFIX,hotrk0.com,REJECT
 DOMAIN-SUFFIX,i2000.xyz,REJECT
 DOMAIN-SUFFIX,igexin.com,REJECT
 DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
@@ -215,6 +208,7 @@ DOMAIN-SUFFIX,knlob.com,REJECT
 DOMAIN-SUFFIX,kochava.com,REJECT
 DOMAIN-SUFFIX,koolmediaoffers.com,REJECT
 DOMAIN-SUFFIX,krxd.net,REJECT
+DOMAIN-SUFFIX,leadbolt.net,REJECT
 DOMAIN-SUFFIX,leadzu.com,REJECT
 DOMAIN-SUFFIX,leanplum.com,REJECT
 DOMAIN-SUFFIX,lenzmx.com,REJECT
@@ -233,7 +227,10 @@ DOMAIN-SUFFIX,mgid.com,REJECT
 DOMAIN-SUFFIX,miaozhen.com,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
+DOMAIN-SUFFIX,mobileconnect.co.kr,REJECT
 DOMAIN-SUFFIX,mobiw.com,REJECT
+DOMAIN-SUFFIX,mobstarry.com,REJECT
+DOMAIN-SUFFIX,mobtrack.co,REJECT
 DOMAIN-SUFFIX,mojiva.com,REJECT
 DOMAIN-SUFFIX,mopub.com,REJECT
 DOMAIN-SUFFIX,mparticle.com,REJECT
@@ -244,6 +241,8 @@ DOMAIN-SUFFIX,nexage.com,REJECT
 DOMAIN-SUFFIX,nr-data.net,REJECT
 DOMAIN-SUFFIX,offerstrack.net,REJECT
 DOMAIN-SUFFIX,omtrdc.net,REJECT
+DOMAIN-SUFFIX,onead.com.tw,REJECT
+DOMAIN-SUFFIX,onevision.com.tw,REJECT
 DOMAIN-SUFFIX,outbrain.com,REJECT
 DOMAIN-SUFFIX,parsely.com,REJECT
 DOMAIN-SUFFIX,peak-adx.com,REJECT
@@ -259,8 +258,10 @@ DOMAIN-SUFFIX,quixdtrk.com,REJECT
 DOMAIN-SUFFIX,rayjump.com,REJECT
 DOMAIN-SUFFIX,rubiconproject.com,REJECT
 DOMAIN-SUFFIX,scorecardresearch.com,REJECT
+DOMAIN-SUFFIX,sdkclick.com,REJECT
 DOMAIN-SUFFIX,serving-sys.com,REJECT
 DOMAIN-SUFFIX,simplepath.com,REJECT
+DOMAIN-SUFFIX,singular.net,REJECT
 DOMAIN-SUFFIX,skimresources.com,REJECT
 DOMAIN-SUFFIX,smardroid.com,REJECT
 DOMAIN-SUFFIX,smartadserver.com,REJECT
@@ -271,6 +272,7 @@ DOMAIN-SUFFIX,startappexchange.com,REJECT
 DOMAIN-SUFFIX,startappservice.com,REJECT
 DOMAIN-SUFFIX,storygize.net,REJECT
 DOMAIN-SUFFIX,summerhamster.com,REJECT
+DOMAIN-SUFFIX,superads.cn,REJECT
 DOMAIN-SUFFIX,supersonicads.com,REJECT
 DOMAIN-SUFFIX,taboola.com,REJECT
 DOMAIN-SUFFIX,tagtic.cn,REJECT
@@ -289,8 +291,10 @@ DOMAIN-SUFFIX,tuanxue360.net,REJECT
 DOMAIN-SUFFIX,turn.com,REJECT
 DOMAIN-SUFFIX,uberads.com,REJECT
 DOMAIN-SUFFIX,udrig.com,REJECT
+DOMAIN-SUFFIX,ugdtimg.com,REJECT
 DOMAIN-SUFFIX,umeng.co,REJECT
 DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,upcpi.com,REJECT
 DOMAIN-SUFFIX,urbanairship.com,REJECT
 DOMAIN-SUFFIX,usebutton.com,REJECT
@@ -304,6 +308,7 @@ DOMAIN-SUFFIX,xdrig.com,REJECT
 DOMAIN-SUFFIX,yldbt.com,REJECT
 DOMAIN-SUFFIX,yllix.com,REJECT
 DOMAIN-SUFFIX,ymtracking.com,REJECT
+DOMAIN-SUFFIX,zcoup.com,REJECT
 
 DOMAIN-SUFFIX,ad.daum.net,REJECT
 DOMAIN-SUFFIX,track.xiachufang.com,REJECT
@@ -311,32 +316,25 @@ DOMAIN-SUFFIX,deliver.ifeng.com,REJECT
 DOMAIN,log.umsns.com,REJECT
 DOMAIN,log.snssdk.com,REJECT
 DOMAIN,toblog.snssdk.com,REJECT
-DOMAIN,wgo.mmstat.com,REJECT
+DOMAIN,log.mmstat.com,REJECT
 DOMAIN,report.jpush.cn,REJECT
 DOMAIN,static.jpush.cn,REJECT
 DOMAIN,stats.jpush.cn,REJECT
-DOMAIN,stats.umsns.com,REJECT
 DOMAIN,s0.2mdn.net,REJECT
 DOMAIN,appnext.hs.llnwd.net,REJECT
 DOMAIN,appnext-a.akamaihd.net,REJECT
 
 DOMAIN,abema-adx.ameba.jp,REJECT
-DOMAIN,ad.12306.cn,REJECT
 DOMAIN,ad.caiyunapp.com,REJECT
-DOMAIN,ad.huajiao.com,REJECT
 DOMAIN,ad.hzyoka.com,REJECT
-DOMAIN,ad.jiemian.com,REJECT
-DOMAIN,ad.qingting.fm,REJECT
+DOMAIN,ad.wappalyzer.com,REJECT
 DOMAIN,ad-cn.jovcloud.com,REJECT
 DOMAIN,adsapi.manhuaren.com,REJECT
 DOMAIN,adsdk.dmzj.com,REJECT
 DOMAIN,ads.daydaycook.com.cn,REJECT
-DOMAIN,adui.tg.meitu.com,REJECT
-DOMAIN,adx.hupu.com,REJECT
-DOMAIN,adxserver.ad.cmvideo.cn,REJECT
 DOMAIN,app-ad.variflight.com,REJECT
 DOMAIN,applog.mobike.com,REJECT
-DOMAIN,ggs.myzaker.com,REJECT
+DOMAIN,itad.linetv.tw,REJECT
 DOMAIN,ja.chushou.tv,REJECT
 DOMAIN,log.b612kaji.com,REJECT
 DOMAIN,log.star.ele.me,REJECT
@@ -346,7 +344,6 @@ DOMAIN,logs.chelaile.net.cn,REJECT
 DOMAIN,mopnativeadv.037201.com,REJECT
 DOMAIN,nativeadv.dftoutiao.com,REJECT
 DOMAIN,optimus-ads.amap.com,REJECT
-DOMAIN,static.vuevideo.net,REJECT
 DOMAIN,sugar.zhihu.com,REJECT
 DOMAIN,track.tiara.daum.net,REJECT
 DOMAIN,track.tiara.kakao.com,REJECT
@@ -373,34 +370,22 @@ DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
 
 # > Baidu
-DOMAIN,eclick.baidu.com,REJECT
-DOMAIN,entry.baidu.com,REJECT
-DOMAIN,mobads-logs.baidu.com,REJECT
-DOMAIN,mobads.baidu.com,REJECT
-DOMAIN,mtj.baidu.com,REJECT
-DOMAIN,spcode.baidu.com,REJECT
-DOMAIN,ucstat.baidu.com,REJECT
-DOMAIN,union.baidu.com,REJECT
-DOMAIN,imageplus.baidu.com,REJECT
-DOMAIN-SUFFIX,pos.baidu.com,REJECT
-DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
-DOMAIN-SUFFIX,tuisong.baidu.com,REJECT
-DOMAIN-SUFFIX,itsdata.map.baidu.com,REJECT
-DOMAIN,loc.map.baidu.com,REJECT
-DOMAIN,ulog.imap.baidu.com,REJECT
-DOMAIN-SUFFIX,data.haoma.sogou.com,REJECT
-DOMAIN-SUFFIX,sp0.baidu.com,REJECT
-DOMAIN-SUFFIX,udpolimenew.baidu.com,REJECT
-DOMAIN-SUFFIX,hpd.baidu.com,REJECT
+DOMAIN,cpu.baidu.com,REJECT
+DOMAIN,imgstat.baidu.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN,afd.baidu.com,REJECT
 DOMAIN,duclick.baidu.com,REJECT
 DOMAIN,hm.baidu.com,REJECT
 DOMAIN,hmma.baidu.com,REJECT
+DOMAIN,mobads.baidu.com,REJECT
+DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
 DOMAIN,wn.pos.baidu.com,REJECT
+DOMAIN,lxbjs.baidu.com,REJECT
+DOMAIN,cir-smart.baidu.com,REJECT
+DOMAIN,crs.baidu.com,REJECT
+DOMAIN,goutong.baidu.com,REJECT
 
-# (G)
 # > Google
 DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,googleadservices.com,REJECT
@@ -410,25 +395,10 @@ DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN-SUFFIX,google-analytics.com,REJECT
 
-
-
-# > iQiyi
-DOMAIN,ifacelog.iqiyi.com,REJECT
-DOMAIN,mbdlog.iqiyi.com,REJECT
-DOMAIN,msg.71.am,REJECT
-DOMAIN,msg.qy.net,REJECT
-DOMAIN,t7z.cupid.iqiyi.com,REJECT
-IP-CIDR,101.227.97.240/32,REJECT,no-resolve
-IP-CIDR,101.227.200.11/32,REJECT,no-resolve
-IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,124.192.153.42/32,REJECT,no-resolve
-
-
 # > MI
 DOMAIN-SUFFIX,ad.xiaomi.com,REJECT
 DOMAIN-SUFFIX,admob.xiaomi.com,REJECT
 DOMAIN-SUFFIX,ad.intl.xiaomi.com,REJECT
-DOMAIN-SUFFIX,data.mistat.xiaomi.com,REJECT
 DOMAIN-SUFFIX,tracking.miui.com,REJECT
 DOMAIN,adv.sec.miui.com,REJECT
 DOMAIN,adv.sec.intl.miui.com,REJECT
@@ -449,29 +419,6 @@ DOMAIN,n.3g.163.com,REJECT
 DOMAIN,nex.163.com,REJECT
 DOMAIN,yt-adp.nosdn.127.net,REJECT
 
-# > PPTV
-DOMAIN,ads.aplus.pptv.com,REJECT
-DOMAIN,asimgs.pplive.cn,REJECT
-DOMAIN,de.as.pptv.com,REJECT
-
-# > Photoable
-DOMAIN,regist.fotoable.com,REJECT
-DOMAIN,cdn.adapi.fotoable.com,REJECT
-
-# > Sina
-DOMAIN,u1.img.mobile.sina.cn,REJECT
-DOMAIN,sax.sina.com.cn,REJECT
-DOMAIN,saxs.sina.com.cn,REJECT
-DOMAIN,saxn.sina.com.cn,REJECT
-
-# > Sohu
-DOMAIN-SUFFIX,ads.sohu.com,REJECT
-DOMAIN-SUFFIX,aty.sohu.com,REJECT
-DOMAIN,imp.optaim.com,REJECT
-DOMAIN,v2.reachmax.cn,REJECT
-DOMAIN,track.sohu.com,REJECT
-DOMAIN,hui.sohu.com,REJECT
-
 # > Tencent
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
@@ -486,56 +433,14 @@ DOMAIN,pingma.qq.com,REJECT
 DOMAIN,pingtcss.qq.com,REJECT
 DOMAIN,splashqqlive.gtimg.com,REJECT
 DOMAIN,tajs.qq.com,REJECT
-
-# > The Paper
-DOMAIN,imgadpai.thepaper.cn,REJECT
-DOMAIN,admonitor.thepaper.cn,REJECT
-
-# > 同花顺
-DOMAIN,adm.10jqka.com.cn,REJECT
-DOMAIN,stat.10jqka.com.cn,REJECT
-DOMAIN,ivy.pchouse.com.cn,REJECT
-
-# (U)
-# > UC
-DOMAIN,adtrack.ucweb.com,REJECT
-DOMAIN,applogios.uc.cn,REJECT
-DOMAIN,track.uc.cn,REJECT
-
-# (Y)
-# > Youku
-DOMAIN-SUFFIX,atm.youku.com,REJECT
-DOMAIN,ad.mobile.youku.com,REJECT
-DOMAIN,iyes.youku.com,REJECT
-
+DOMAIN,wxsnsdy.wxs.qq.com,REJECT
+DOMAIN,wxsnsdythumb.wxs.qq.com,REJECT
+DOMAIN,isdspeed.qq.com,REJECT
 
 //me
-DOMAIN-SUFFIX,nuomi.com,REJECT
-DOMAIN,logs.amap.com,REJECT
-DOMAIN,stats.jpush.cn,REJECT
-DOMAIN,wx.hfxing.cn,REJECT
-DOMAIN,ali-stats.jpush.cn,REJECT
-DOMAIN-SUFFIX,appadhoc.com,REJECT
-
-# > WPS
-DOMAIN,ad-stat.ksosoft.com,REJECT
-DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
-USER-AGENT,wpsoffice*,REJECT
-DOMAIN,img.auction-ads.wpscdn.cn,REJECT
-
-//me
-IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
-# > ali
-IP-CIDR,47.246.16.0/24,DIRECT,no-resolve
-IP-CIDR,205.204.96.0/19,DIRECT,no-resolve
-IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
-IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
-IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
-
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,rdimg.com,DIRECT
 DOMAIN-SUFFIX,letsencrypt.org,DIRECT
-
 
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,tiqcdn.com,DIRECT
@@ -632,11 +537,6 @@ DOMAIN-SUFFIX,windowsupdate.com,PROXY
 # > App Store Download || iBooks Sample
 DOMAIN-SUFFIX,itunes.apple.com,PROXY
 
-# > Apple Music
-DOMAIN,aod.itunes.apple.com,PROXY
-DOMAIN,audio.itunes.apple.com,PROXY
-DOMAIN,audio-ssl.itunes.apple.com,PROXY
-DOMAIN,streamingaudio.itunes.apple.com,PROXY
 
 DOMAIN,appleiphonecell.com,PROXY
 
@@ -1394,9 +1294,6 @@ IP-CIDR,185.188.32.0/24,DIRECT,no-resolve
 IP-CIDR,185.188.33.0/24,DIRECT,no-resolve
 IP-CIDR,185.188.34.0/24,DIRECT,no-resolve
 IP-CIDR,185.188.35.0/24,DIRECT,no-resolve
-
-// Accelerate direct sites
-DOMAIN-KEYWORD,torrent,DIRECT
 
 GEOIP,CN,DIRECT
 FINAL,PROXY
