--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -1,45 +1,42 @@
 //apple
-USER-AGENT *com.apple.mobileme.fmip1,DIRECT
-USER-AGENT *WeatherFoundation*,DIRECT
-USER-AGENT %E5%9C%B0%E5%9B%BE*,DIRECT
-USER-AGENT %E8%AE%BE%E7%BD%AE*,DIRECT
-USER-AGENT com.apple.geod*,DIRECT
-USER-AGENT com.apple.Maps,DIRECT
-USER-AGENT FindMyFriends*,DIRECT
-USER-AGENT FindMyiPhone*,DIRECT
-USER-AGENT FMDClient*,DIRECT
-USER-AGENT FMFD*,DIRECT
-USER-AGENT fmflocatord*,DIRECT
-USER-AGENT geod*,DIRECT
-USER-AGENT locationd*,DIRECT
-USER-AGENT Maps*,DIRECT
-DOMAIN api.smoot.apple.com,DIRECT
-DOMAIN captive.apple.com,DIRECT
-DOMAIN configuration.apple.com,DIRECT
-DOMAIN guzzoni.apple.com,DIRECT
-DOMAIN smp-device-content.apple.com,DIRECT
-DOMAIN xp.apple.com,DIRECT
-DOMAIN-SUFFIX ess.apple.com,DIRECT
-DOMAIN-SUFFIX push-apple.com.akadns.net,DIRECT
-DOMAIN-SUFFIX push.apple.com,DIRECT
-DOMAIN aod.itunes.apple.com,DIRECT
-DOMAIN mesu.apple.com,DIRECT
-DOMAIN api.smoot.apple.cn,DIRECT
-DOMAIN gs-loc.apple.com,DIRECT
-DOMAIN mvod.itunes.apple.com,DIRECT
-DOMAIN streamingaudio.itunes.apple.com,DIRECT
-DOMAIN-SUFFIX lcdn-locator.apple.com,DIRECT
-DOMAIN-SUFFIX lcdn-registration.apple.com,DIRECT
-DOMAIN-SUFFIX ls.apple.com,DIRECT
-
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
+USER-AGENT,com.apple.geod*,DIRECT
+USER-AGENT,com.apple.Maps,DIRECT
+USER-AGENT,FindMyFriends*,DIRECT
+USER-AGENT,FindMyiPhone*,DIRECT
+USER-AGENT,FMDClient*,DIRECT
+USER-AGENT,FMFD*,DIRECT
+USER-AGENT,fmflocatord*,DIRECT
+USER-AGENT,geod*,DIRECT
+USER-AGENT,locationd*,DIRECT
+USER-AGENT,Maps*,DIRECT
+DOMAIN,api.smoot.apple.com,DIRECT
+DOMAIN,captive.apple.com,DIRECT
+DOMAIN,configuration.apple.com,DIRECT
+DOMAIN,guzzoni.apple.com,DIRECT
+DOMAIN,smp-device-content.apple.com,DIRECT
+DOMAIN,xp.apple.com,DIRECT
+DOMAIN-SUFFIX,ess.apple.com,DIRECT
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN,aod.itunes.apple.com,DIRECT
+DOMAIN,mesu.apple.com,DIRECT
+DOMAIN,api.smoot.apple.cn,DIRECT
+DOMAIN,gs-loc.apple.com,DIRECT
+DOMAIN,mvod.itunes.apple.com,DIRECT
+DOMAIN,streamingaudio.itunes.apple.com,DIRECT
+DOMAIN-SUFFIX,lcdn-locator.apple.com,DIRECT
+DOMAIN-SUFFIX,lcdn-registration.apple.com,DIRECT
+DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 //Siri
 USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
-
-
 
 # > Exclusions
 DOMAIN,analytics.google.com,DIRECT
@@ -48,28 +45,12 @@ DOMAIN,analyticsreporting.googleapis.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 DOMAIN-SUFFIX,goodreads.com,PROXY
 
-
-
 #reject
-DOMAIN,c.isdspeed.qq.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
 DOMAIN,cig.com.cn,REJECT
 DOMAIN,ta.trs.cn,REJECT
-
-DOMAIN,tcss.qq.com,REJECT
 DOMAIN,tingyun.com,REJECT
-
 DOMAIN,api.share.mob.com,REJECT
-
-DOMAIN,gsp0.baidu.com,REJECT
-DOMAIN,caclick.baidu.com,REJECT
-DOMAIN,publish-pic-cpu.baidu.com,REJECT
-DOMAIN-SUFFIX,sofire.baidu.com,REJECT
-DOMAIN-SUFFIX,baifubao.com,REJECT
-DOMAIN,biaozhu.baidu.com,REJECT
-DOMAIN-SUFFIX,pingma.qq.com,REJECT
-DOMAIN,loc.map.baidu.com,REJECT
-DOMAIN-SUFFIX,nuomi.com,REJECT
 
 DOMAIN,logs.amap.com,REJECT
 DOMAIN,stats.jpush.cn,REJECT
@@ -370,6 +351,14 @@ DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
 
 # > Baidu
+DOMAIN-SUFFIX,nuomi.com,REJECT
+DOMAIN,gsp0.baidu.com,REJECT
+DOMAIN,caclick.baidu.com,REJECT
+DOMAIN,publish-pic-cpu.baidu.com,REJECT
+DOMAIN-SUFFIX,sofire.baidu.com,REJECT
+DOMAIN-SUFFIX,baifubao.com,REJECT
+DOMAIN,biaozhu.baidu.com,REJECT
+DOMAIN,loc.map.baidu.com,REJECT
 DOMAIN,cpu.baidu.com,REJECT
 DOMAIN,imgstat.baidu.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
@@ -420,6 +409,8 @@ DOMAIN,nex.163.com,REJECT
 DOMAIN,yt-adp.nosdn.127.net,REJECT
 
 # > Tencent
+DOMAIN,tcss.qq.com,REJECT
+DOMAIN-SUFFIX,pingma.qq.com,REJECT
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,gdt.qq.com,REJECT
@@ -429,13 +420,12 @@ DOMAIN,btrace.qq.com,REJECT
 DOMAIN,mtrace.qq.com,REJECT
 DOMAIN,oth.eve.mdt.qq.com,REJECT
 DOMAIN,pgdt.gtimg.cn,REJECT
-DOMAIN,pingma.qq.com,REJECT
 DOMAIN,pingtcss.qq.com,REJECT
 DOMAIN,splashqqlive.gtimg.com,REJECT
 DOMAIN,tajs.qq.com,REJECT
 DOMAIN,wxsnsdy.wxs.qq.com,REJECT
 DOMAIN,wxsnsdythumb.wxs.qq.com,REJECT
-DOMAIN,isdspeed.qq.com,REJECT
+DOMAIN-SUFFIX,isdspeed.qq.com,REJECT
 
 //me
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
