--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -26,7 +26,7 @@ DOMAIN,captive.apple.com,DIRECT
 DOMAIN,configuration.apple.com,DIRECT
 DOMAIN,guzzoni.apple.com,DIRECT
 DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,xp.apple.com,PROXY
+DOMAIN,xp.apple.com,PROXY,force-remote-dns
 
 DOMAIN-SUFFIX,ess.apple.com,DIRECT
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
@@ -48,35 +48,32 @@ USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
 
 
-DOMAIN-SUFFIX,apps.apple.com,PROXY
+DOMAIN-SUFFIX,apps.apple.com,PROXY,force-remote-dns
 
-DOMAIN-SUFFIX,itunes.com,PROXY
+DOMAIN-SUFFIX,itunes.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,PROXY
+DOMAIN-SUFFIX,appstore.com,PROXY,force-remote-dns
 
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,PROXY
-
-DOMAIN-SUFFIX,me.com,PROXY
-
-DOMAIN-SUFFIX,mzstatic.com,PROXY
-
+DOMAIN-SUFFIX,icloud.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,me.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,mzstatic.com,PROXY,force-remote-dns
 IP-CIDR,17.0.0.0/8,PROXY,no-resolve
 
 //油管
-USER-AGENT,*youtube*,cn2
-DOMAIN-SUFFIX,googlevideo.com,cn2
-DOMAIN-SUFFIX,youtube.com,cn2
-DOMAIN,youtubei.googleapis.com,cn2
-USER-AGENT,com.google.ios.youtube*,cn2
-USER-AGENT,YouTubeMusic*,cn2
+USER-AGENT,*youtube*,cn2,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,cn2,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,cn2,force-remote-dns
+DOMAIN,youtubei.googleapis.com,cn2,force-remote-dns
+USER-AGENT,com.google.ios.youtube*,cn2,force-remote-dns
+USER-AGENT,YouTubeMusic*,cn2,force-remote-dns
 
 //动画疯
-USER-AGENT,Anime*,tw
-DOMAIN-SUFFIX,bahamut.com.tw,tw
-DOMAIN-SUFFIX,gamer.com.tw,tw
-DOMAIN-SUFFIX,hinet.net,tw
+USER-AGENT,Anime*,tw,force-remote-dns
+DOMAIN-SUFFIX,bahamut.com.tw,tw,force-remote-dns
+DOMAIN-SUFFIX,gamer.com.tw,tw,force-remote-dns
+DOMAIN-SUFFIX,hinet.net,tw,force-remote-dns
 
 //steam
 DOMAIN-SUFFIX,akamaihd.net,DIRECT
@@ -103,9 +100,9 @@ DOMAIN,analyticsinsights-pa.googleapis.com,DIRECT
 DOMAIN,analyticsreporting.googleapis.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 
-DOMAIN-SUFFIX,googleapis.com,PROXY
-DOMAIN-SUFFIX,rakuen.thec.me,PROXY
-DOMAIN-SUFFIX,dapenti.com,PROXY
+DOMAIN-SUFFIX,googleapis.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,rakuen.thec.me,PROXY,force-remote-dns
+DOMAIN-SUFFIX,dapenti.com,PROXY,force-remote-dns
 
 DOMAIN,log.mmstat.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
@@ -490,20 +487,20 @@ DOMAIN-SUFFIX,isdspeed.qq.com,REJECT
 
 //Apple
 # > App Store
-DOMAIN-SUFFIX,itunes.apple.com,PROXY
-DOMAIN,appleiphonecell.com,PROXY
-DOMAIN-SUFFIX,aaplimg.com,PROXY
-DOMAIN-SUFFIX,appsto.re,PROXY
-DOMAIN-SUFFIX,cdn-apple.com,PROXY
-DOMAIN-SUFFIX,icloud-content.com,PROXY
+DOMAIN-SUFFIX,itunes.apple.com,PROXY,force-remote-dns
+DOMAIN,appleiphonecell.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,aaplimg.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,appsto.re,PROXY,force-remote-dns
+DOMAIN-SUFFIX,cdn-apple.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,icloud-content.com,PROXY,force-remote-dns
 
 
-DOMAIN-SUFFIX,sentry.io,PROXY
-DOMAIN-SUFFIX,typekit.net,PROXY
-DOMAIN-SUFFIX,getpocket.com,PROXY
-DOMAIN-SUFFIX,pocket-image-cache.com,PROXY
-DOMAIN-SUFFIX,imagetwist.com,PROXY
-DOMAIN-KEYWORD,github,PROXY
+DOMAIN-SUFFIX,sentry.io,PROXY,force-remote-dns
+DOMAIN-SUFFIX,typekit.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,getpocket.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,pocket-image-cache.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,imagetwist.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,github,PROXY,force-remote-dns
 IP-CIDR,140.101.144.0/20,PROXY,no-resolve
 DOMAIN-SUFFIX,digicert.com,PROXY
 DOMAIN-SUFFIX,ampproject.net,PROXY
@@ -523,15 +520,15 @@ DOMAIN-SUFFIX,weserv.nl,PROXY
 DOMAIN-SUFFIX,inoreader.com,PROXY
 DOMAIN-SUFFIX,feedx.co,PROXY
 DOMAIN-SUFFIX,feedx.net,PROXY
-DOMAIN-SUFFIX,liuli.in,PROXY
+DOMAIN-SUFFIX,liuli.in,PROXY,force-remote-dns
 DOMAIN-SUFFIX,acg.gy,PROXY
 DOMAIN-SUFFIX,kindle4rss.com,PROXY
 DOMAIN-SUFFIX,dmhy.org,PROXY
 DOMAIN-SUFFIX,rsshub.app,PROXY
 DOMAIN-SUFFIX,evernote.com,PROXY
 DOMAIN-SUFFIX,sehuatuchuang.com,PROXY
-DOMAIN-SUFFIX,sehuatang.org,PROXY
-DOMAIN-SUFFIX,sehuatang.com,PROXY
+DOMAIN-SUFFIX,sehuatang.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,sehuatang.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zaobao.com,PROXY
 DOMAIN-SUFFIX,zaobao.com.sg,PROXY
 DOMAIN-SUFFIX,dlercloud.io,PROXY
@@ -620,15 +617,15 @@ DOMAIN-SUFFIX,pandora.com,PROXY
 DOMAIN-SUFFIX,appspot.com,PROXY
 DOMAIN-SUFFIX,blogger.com,PROXY
 DOMAIN-SUFFIX,getoutline.org,PROXY
-DOMAIN-SUFFIX,gvt0.com,PROXY
-DOMAIN-SUFFIX,gvt1.com,PROXY
-DOMAIN-SUFFIX,gvt3.com,PROXY
-DOMAIN-SUFFIX,xn--ngstr-lra8j.com,PROXY
-DOMAIN-KEYWORD,google,PROXY
+DOMAIN-SUFFIX,gvt0.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gvt3.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,xn--ngstr-lra8j.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY
 DOMAIN-SUFFIX,cdninstagram.com,PROXY
 DOMAIN-SUFFIX,fb.com,PROXY
-DOMAIN-SUFFIX,fb.me,PROXY
+DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,fbaddins.com,PROXY
 DOMAIN-SUFFIX,fbcdn.net,PROXY
 DOMAIN-SUFFIX,fbsbx.com,PROXY
@@ -649,7 +646,7 @@ DOMAIN-SUFFIX,twimg.co,PROXY
 DOMAIN-SUFFIX,twimg.com,PROXY
 DOMAIN-SUFFIX,twitpic.com,PROXY
 DOMAIN-SUFFIX,vine.co,PROXY
-DOMAIN-KEYWORD,twitter,PROXY
+DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4shared.com,PROXY
 DOMAIN-SUFFIX,881903.com,PROXY
 DOMAIN-SUFFIX,abc.net.au,PROXY
@@ -785,7 +782,7 @@ DOMAIN-SUFFIX,ok.ru,PROXY
 DOMAIN-SUFFIX,okex.com,PROXY
 DOMAIN-SUFFIX,pcloud.com,PROXY
 DOMAIN-SUFFIX,pinimg.com,PROXY
-DOMAIN-KEYWORD,pixiv,PROXY
+DOMAIN-KEYWORD,pixiv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pureapk.com,PROXY
 DOMAIN-SUFFIX,quora.com,PROXY
 DOMAIN-SUFFIX,quoracdn.net,PROXY
@@ -820,7 +817,7 @@ DOMAIN-SUFFIX,upmedia.mg,PROXY
 DOMAIN-SUFFIX,uptodown.com,PROXY
 DOMAIN-SUFFIX,ustream.tv,PROXY
 DOMAIN-SUFFIX,uwants.com,PROXY
-DOMAIN-SUFFIX,v2ray.com,PROXY
+DOMAIN-SUFFIX,v2ray.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,viber.com,PROXY
 DOMAIN-SUFFIX,videopress.com,PROXY
 DOMAIN-SUFFIX,vimeo.com,PROXY
@@ -924,7 +921,7 @@ IP-CIDR,74.119.76.0/22,PROXY,no-resolve
 IP-CIDR,173.194.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.0.0/16,PROXY,no-resolve
 
-DOMAIN-SUFFIX,abc.xyz,PROXY
+DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,android.com,PROXY
 DOMAIN-SUFFIX,androidify.com,PROXY
 DOMAIN-SUFFIX,dialogflow.com,PROXY
@@ -968,7 +965,7 @@ DOMAIN-SUFFIX,x.company,PROXY
 DOMAIN-SUFFIX,youtu.be,PROXY
 DOMAIN-SUFFIX,yt.be,PROXY
 DOMAIN-SUFFIX,ytimg.com,PROXY
-DOMAIN-SUFFIX,akamaihd.net,PROXY
+DOMAIN-SUFFIX,akamaihd.net,PROXY,force-remote-dns
 DOMAIN,media.steampowered.com,PROXY
 DOMAIN,store.steampowered.com,PROXY
 DOMAIN-SUFFIX,brawlstars.com,game
@@ -1028,7 +1025,7 @@ DOMAIN-SUFFIX,wikia.com,PROXY
 DOMAIN-SUFFIX,wn.com,PROXY
 DOMAIN-SUFFIX,wolframalpha.com,PROXY
 DOMAIN-SUFFIX,x-art.com,PROXY
-DOMAIN-SUFFIX,yimg.com,PROXY
+DOMAIN-SUFFIX,yimg.com,PROXY,force-remote-dns
 
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
@@ -1036,8 +1033,8 @@ IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 
-DOMAIN-SUFFIX,msauth.net,Proxy
-DOMAIN,mobile.pipe.aria.microsoft.com,Proxy
+DOMAIN-SUFFIX,msauth.net,Proxy,force-remote-dns
+DOMAIN,mobile.pipe.aria.microsoft.com,Proxy,force-remote-dns
 
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,rdimg.com,DIRECT
