--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -4,38 +4,75 @@ skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0
 ipv6 = false
 enhanced-mode-by-rule = 1
 show-error-page-for-reject = false
-dns-server = 119.29.29.29, 117.50.10.10, 114.114.114.114, system
+dns-server = 119.29.29.29, 114.114.114.114, system
 allow-wifi-access = false
 network-framework = false
 
 [Proxy]
 🇯🇵软银-1 = ss, jp.001.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-🇰🇷AZ = ss, 52.231.26.92, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇯🇵BBTEC1 = ss, 103.96.3.229, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇯🇵AZ = ss, 13.70.21.164, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇰🇷TK4 = ss, 119.192.136.233, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
 🇲🇴2 = ss, 60.246.119.101, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇲🇴18 = ss, 122.100.182.95, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-杭州🇭🇰AZ = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇨🇳CHT6 = ss, 61.216.166.229, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇨🇳CHT2 = ss, 211.75.30.99, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇭🇰AZ2 = ss, 137.116.164.78, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-深圳🇲🇴 = ss, 120.78.175.138, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇰🇷SK1 = ss, 27.102.134.178, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
+上海12 = ss, 175.102.11.143, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+上海10 = ss, 175.102.11.149, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇺🇸GIA = ss, 154.223.185.50, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇭🇰IPLC = ss, 120.78.255.149, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇭🇰GT2 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 google = ss, 34.80.56.62, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 🇲🇴2, google, 🇭🇰AZ2, 杭州🇭🇰AZ, 🇨🇳CHT6, 🇰🇷SK1, 🇨🇳CHT2, 🇰🇷TK4, 🇲🇴18, 🇯🇵AZ
-油管 = select, Proxy, google, 🇯🇵软银-1, 🇯🇵AZ, 🇰🇷TK4, 🇺🇸GIA
+Proxy = select, 🇲🇴2, google, 🇭🇰GT2, 🇯🇵BBTEC1
+油管 = select, Proxy, google, 🇯🇵AZ, 🇯🇵BBTEC1, 🇺🇸GIA
 tw = select, Proxy, 🇨🇳CHT6, 🇨🇳CHT2
-game = select, DIRECT, Proxy, 🇭🇰IPLC, 🇰🇷SK1, 🇰🇷TK4, 🇨🇳CHT2, 杭州🇭🇰AZ, 🇲🇴2, 🇲🇴18
+game = select, DIRECT, Proxy, 🇭🇰GT2, 杭州, 🇲🇴2
 AD = select, REJECT
 
 [Rule]
 # SYSTEM直连规则
 RULE-SET,SYSTEM,DIRECT
+DOMAIN-SUFFIX,crashlytics.com,DIRECT
+
+//Siri
+USER-AGENT,*AssistantServices*,DIRECT
+USER-AGENT,MobileAsset*,DIRECT
+USER-AGENT,Siri*,DIRECT
+USER-AGENT,*siri*,DIRECT
+
+IP-CIDR,17.0.0.0/8,DIRECT
+
+# >> App Store Preview
+DOMAIN,itunes.apple.com,proxy
+DOMAIN,apps.apple.com,proxy
+
+# >> Apple URL Shortener
+DOMAIN-SUFFIX,appsto.re,PROXY
+
+
+# >> TestFlight
+DOMAIN,beta.itunes.apple.com,PROXY
+DOMAIN,testflight.apple.com,PROXY
+
+# >> Spotlight
+DOMAIN,api-glb-sea.smoot.apple.com,proxy
+# >> Dictionary
+DOMAIN,lookup-api.apple.com,proxy
+
+
+DOMAIN,appleiphonecell.com,DIRECT
+DOMAIN-SUFFIX,aaplimg.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN-SUFFIX,itunes.com,DIRECT
+DOMAIN-SUFFIX,appstore.com,DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,direct
+DOMAIN-SUFFIX,icloud-content.com,direct
+DOMAIN-SUFFIX,apple.co,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
 
 # Proxy
 # > Youtube
@@ -52,18 +89,18 @@ DOMAIN-SUFFIX,bahamut.com.tw,tw
 DOMAIN-SUFFIX,gamer.com.tw,tw
 DOMAIN-SUFFIX,hinet.net,tw
 
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.list,Proxy
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,game
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
-
-#DIRECT
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,DIRECT
-
-RULE-SET,LAN,DIRECT
-
 # AD
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/reject.list,AD
+
+# Proxy
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/proxy.list,Proxy
+
+# game
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,game
+
+
+# DIRECT
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/direct.list,DIRECT
 
 FINAL,Proxy,dns-failed
 
