--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -45,21 +45,22 @@ USER-AGENT,*siri*,DIRECT
 IP-CIDR,17.0.0.0/8,DIRECT
 
 # >> App Store Preview
-DOMAIN,itunes.apple.com,proxy
-DOMAIN,apps.apple.com,proxy
+DOMAIN,itunes.apple.com,Proxy
+
+DOMAIN,apps.apple.com,Proxy
 
 # >> Apple URL Shortener
-DOMAIN-SUFFIX,appsto.re,PROXY
+DOMAIN-SUFFIX,appsto.re,Proxy
 
 
 # >> TestFlight
-DOMAIN,beta.itunes.apple.com,PROXY
-DOMAIN,testflight.apple.com,PROXY
+DOMAIN,beta.itunes.apple.com,Proxy
+DOMAIN,testflight.apple.com,Proxy
 
 # >> Spotlight
-DOMAIN,api-glb-sea.smoot.apple.com,proxy
+DOMAIN,api-glb-sea.smoot.apple.com,Proxy
 # >> Dictionary
-DOMAIN,lookup-api.apple.com,proxy
+DOMAIN,lookup-api.apple.com,Proxy
 
 
 DOMAIN,appleiphonecell.com,DIRECT
@@ -69,8 +70,8 @@ DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
 DOMAIN-SUFFIX,itunes.com,DIRECT
 DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,direct
-DOMAIN-SUFFIX,icloud-content.com,direct
+DOMAIN-SUFFIX,cdn-apple.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
 
