--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -76,23 +76,21 @@ DOMAIN-SUFFIX,gamer.com.tw,tw,force-remote-dns
 DOMAIN-SUFFIX,hinet.net,tw,force-remote-dns
 
 //steam
-DOMAIN-SUFFIX,akamaihd.net,DIRECT
-
-DOMAIN-SUFFIX,steampowered.com,DIRECT
-
-DOMAIN-SUFFIX,steamstatic.com,DIRECT
-
-IP-CIDR,155.133.0.0/16,DIRECT,no-resolve
-IP-CIDR,153.254.86.0/24,DIRECT,no-resolve
-IP-CIDR,205.196.0.0/16,DIRECT,no-resolve
-IP-CIDR,162.254.0.0/16,DIRECT,no-resolve
-IP-CIDR,34.85.0.0/16,DIRECT,no-resolve
-IP-CIDR,185.25.0.0/16,DIRECT,no-resolve
-IP-CIDR,205.185.0.0/16,DIRECT,no-resolve
-IP-CIDR,146.66.0.0/16,DIRECT,no-resolve
-IP-CIDR,103.10.0.0/16,DIRECT,no-resolve
-IP-CIDR,130.211.0.0/16,DIRECT,no-resolve
-IP-CIDR,190.217.33.0/24,DIRECT,no-resolve
+# > Steam
+DOMAIN-SUFFIX,steam-chat.com,game,force-remote-dns
+DOMAIN-KEYWORD,steam,game,force-remote-dns
+DOMAIN-SUFFIX,akamaihd.net,game,force-remote-dns
+IP-CIDR,34.85.0.0/16,game,no-resolve
+IP-CIDR,103.10.0.0/16,game,no-resolve
+IP-CIDR,130.211.0.0/16,game,no-resolve
+IP-CIDR,146.66.0.0/16,game,no-resolve
+IP-CIDR,155.133.0.0/16,game,no-resolve
+IP-CIDR,153.254.0.0/15,game,no-resolve
+IP-CIDR,162.254.0.0/16,game,no-resolve
+IP-CIDR,185.25.0.0/16,game,no-resolve
+IP-CIDR,190.217.33.0/24,game,no-resolve
+IP-CIDR,205.196.0.0/16,game,no-resolve
+IP-CIDR,205.185.0.0/16,game,no-resolve
 
 # > Exclusions
 DOMAIN,analytics.google.com,DIRECT
