--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -10,25 +10,24 @@ network-framework = false
 
 [Proxy]
 🇯🇵软银-1 = ss, jp.001.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-🇯🇵BBTEC1 = ss, 103.96.3.229, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇯🇵AZ = ss, 13.70.21.164, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇲🇴2 = ss, 60.246.119.101, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇲🇴18 = ss, 122.100.182.95, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇨🇳CHT6 = ss, 61.216.166.229, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇨🇳CHT2 = ss, 211.75.30.99, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇭🇰AZ2 = ss, 137.116.164.78, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 上海12 = ss, 175.102.11.143, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 上海10 = ss, 175.102.11.149, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇺🇸GIA = ss, 154.223.185.50, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇭🇰GT2 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇭🇰cn3 = ss, 103.135.250.210, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 google = ss, 34.80.56.62, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
+🇭🇰深圳B = ss, sz-2.node.mynero.net, 11701, encrypt-method=aes-128-gcm, password=hh745201, udp-relay=true
+🇭🇰杭州 = ss, hz-1.node.mynero.net, 11701, encrypt-method=aes-128-gcm, password=hh745201, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 🇲🇴2, google, 🇭🇰GT2, 🇯🇵BBTEC1
-油管 = select, Proxy, google, 🇯🇵AZ, 🇯🇵BBTEC1, 🇺🇸GIA
-tw = select, Proxy, 🇨🇳CHT6, 🇨🇳CHT2
-game = select, DIRECT, Proxy, 🇭🇰GT2, 杭州, 🇲🇴2
+Proxy = select, 🇲🇴2, google, 🇭🇰cn3, 🇭🇰深圳B
+油管 = select, Proxy, google, 🇯🇵AZ, 🇺🇸GIA
+tw = select, Proxy, 🇨🇳CHT2
+game = select, DIRECT, Proxy, 🇭🇰cn3, 🇭🇰杭州, 🇲🇴2
 AD = select, REJECT
 
 [Rule]
@@ -42,7 +41,7 @@ USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
 
-IP-CIDR,17.0.0.0/8,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 
 # >> App Store Preview
 DOMAIN,itunes.apple.com,Proxy
