--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -25,7 +25,7 @@ google = ss, 34.80.56.62, 543, encrypt-method=chacha20-ietf, password=ss745201, 
 
 [Proxy Group]
 Proxy = select, 🇲🇴2, google, 🇭🇰cn3, 🇭🇰深圳B
-油管 = select, Proxy, google, 🇯🇵AZ, 🇺🇸GIA
+油管 = select, Proxy, google, 🇺🇸GIA
 tw = select, Proxy, 🇨🇳CHT2
 game = select, DIRECT, Proxy, 🇭🇰cn3, 🇭🇰杭州, 🇲🇴2
 AD = select, REJECT
