--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -327,6 +327,8 @@ IP-CIDR,18.0.0.0/8,game,no-resolve
 DOMAIN-SUFFIX,steam-chat.com,game,force-remote-dns
 DOMAIN-KEYWORD,steam,game,force-remote-dns
 DOMAIN-SUFFIX,akamaihd.net,game,force-remote-dns
+DOMAIN-SUFFIX,underlords.com,game,force-remote-dns
+DOMAIN-SUFFIX,dota2.com,game,force-remote-dns
 IP-CIDR,34.85.0.0/16,game,no-resolve
 IP-CIDR,103.10.0.0/16,game,no-resolve
 IP-CIDR,130.211.0.0/16,game,no-resolve
