--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -94,9 +94,6 @@ DOMAIN,tingyun.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,trackingio.com,REJECT
 
-//mifit
-DOMAIN,circle-prod.cdn.bcebos.com,REJECT
-DOMAIN-SUFFIX,fds.api.mi-img.com,REJECT
 
 //江阴bus
 DOMAIN,stats.jpush.cn,REJECT
@@ -141,6 +138,7 @@ DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
 
 # > General
+DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
@@ -302,10 +300,10 @@ DOMAIN-SUFFIX,ggpht.com,olo,force-remote-dns
 DOMAIN-SUFFIX,ytimg.com,olo,force-remote-dns
 
 //动画疯
-USER-AGENT,Anime*,tw,force-remote-dns
-DOMAIN-SUFFIX,bahamut.com.tw,tw,force-remote-dns
-DOMAIN-SUFFIX,gamer.com.tw,tw,force-remote-dns
-DOMAIN-SUFFIX,hinet.net,tw,force-remote-dns
+USER-AGENT,Anime*,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bahamut.com.tw,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gamer.com.tw,PROXY,force-remote-dns
+DOMAIN-SUFFIX,hinet.net,PROXY,force-remote-dns
 
 //supercell
 DOMAIN-SUFFIX,supercell.com,game,force-remote-dns
@@ -394,6 +392,7 @@ DOMAIN-SUFFIX,amazon.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,amazonaws.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ameba.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,amplitude.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,anime1.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,android.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,androidify.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,aol.com,PROXY,force-remote-dns
@@ -409,6 +408,7 @@ DOMAIN-SUFFIX,aptoide.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,archive.is,PROXY,force-remote-dns
 DOMAIN-SUFFIX,archive.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,arte.tv,PROXY,force-remote-dns
+DOMAIN-SUFFIX,aralego.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ask.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,assdrty.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
@@ -479,6 +479,7 @@ DOMAIN-SUFFIX,comparitech.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,conoha.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,costco.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,crackle.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,creativecdn.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,crucial.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ctitv.com.tw,PROXY,force-remote-dns
@@ -714,6 +715,7 @@ DOMAIN-SUFFIX,rocksdb.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,rsshub.app,PROXY,force-remote-dns
 DOMAIN-SUFFIX,scdn.co,PROXY,force-remote-dns
 DOMAIN-SUFFIX,scmp.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,scupio.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,scribd.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,seatguru.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,segment.io,PROXY,force-remote-dns
