--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -911,6 +911,7 @@ DOMAIN-SUFFIX,alipayobjects.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
 DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
+DOMAIN-SUFFIX,abchina.com,DIRECT
 DOMAIN-SUFFIX,aolcdn.com,DIRECT
 DOMAIN-SUFFIX,apache.org,DIRECT
 DOMAIN-SUFFIX,api.crisp.chat,DIRECT
