--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1139,7 +1139,7 @@ USER-AGENT,cmblife*,DIRECT
 USER-AGENT,eusoft_ting_en_iphone,DIRECT
 USER-AGENT,hide*,DIRECT
 USER-AGENT,MegaWerewolf*,DIRECT
-USER-AGENT,MicroMessenger%20Client,DIRECT
+USER-AGENT,MicroMessenger%20Client*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,Moke*,DIRECT
 USER-AGENT,osee2unifiedRelease*,DIRECT
