--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -1,33 +1,28 @@
 [General]
 loglevel = notify
 skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 127.0.0.1, localhost, *.local
-ipv6 = false
+ipv6 = true
 enhanced-mode-by-rule = 1
 show-error-page-for-reject = false
-dns-server = 119.29.29.29, 114.114.114.114, system
+dns-server = 117.50.10.10, 114.114.114.114, system
 allow-wifi-access = false
 network-framework = false
 
 [Proxy]
 🇯🇵软银-1 = ss, jp.001.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-🇲🇴2 = ss, 60.246.119.101, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇲🇴18 = ss, 122.100.182.95, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇨🇳CHT2 = ss, 211.75.30.99, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇭🇰AZ2 = ss, 137.116.164.78, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-上海12 = ss, 175.102.11.143, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-上海10 = ss, 175.102.11.149, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇺🇸GIA = ss, 154.223.185.50, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇭🇰cn3 = ss, 103.135.250.210, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-google = ss, 34.80.56.62, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
-🇭🇰深圳B = ss, sz-2.node.mynero.net, 11701, encrypt-method=aes-128-gcm, password=hh745201, udp-relay=true
-🇭🇰杭州 = ss, hz-1.node.mynero.net, 11701, encrypt-method=aes-128-gcm, password=hh745201, udp-relay=true
-
+🇨🇳CHT7= ss, 211.75.30.241, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=itunes.apple.com, udp-relay=true
+🇺🇸GIA6 = ss, 38.121.21.205, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=itunes.apple.com, udp-relay=true
+🇭🇰GIA2 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇭🇰CMI4 = ss, cmi4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇭🇰IPLC32 = ss, 118.178.241.44, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇭🇰IPLC31 = ss, 106.15.106.122, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇺🇸BGP2 = ss, 175.102.11.138, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com
+google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇲🇴2, google, 🇭🇰cn3, 🇭🇰深圳B
-油管 = select, Proxy, google, 🇺🇸GIA
-tw = select, Proxy, 🇨🇳CHT2
-game = select, DIRECT, Proxy, 🇭🇰cn3, 🇭🇰杭州, 🇲🇴2
+Proxy = select, 🇨🇳CHT7, google, 🇭🇰GIA2, 🇭🇭🇰CMI4, 🇭🇰IPLC32
+油管 = select, Proxy, google, 🇺🇸GIA6, 🇺🇸BGP2
+tw = select, Proxy, 🇨🇳CHT7
+game = select, DIRECT, Proxy, 🇭🇰IPLC32, 🇭🇰IPLC32
 AD = select, REJECT
 
 [Rule]
@@ -112,6 +107,5 @@ FINAL,Proxy,dns-failed
 ^https://www.baidu.com\/\?action=static&ms=1&version=css_page_2@0.* - reject
 
 [Header Rewrite]
-^https?://(www.)?zhihu\.com header-del Referer
-^https?://(www.)?zhihu\.com header-add Referer cache.baidu.com,cache.so.com,cache.sogou.com,cache.soso.com
-^https?://zhidao\.baidu\.com header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.2 Safari/605.1.15
+^https?://(www.)?zhihu\.com header-del User-Agent 
+^https?://(www.)?zhihu\.com header-add User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10) AppleWebKit/538.44(KHTML, like Gecko) Version/8.0 Safari/38.44
