--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -19,7 +19,7 @@ network-framework = false
 🇺🇸BGP2 = ss, 175.102.11.138, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇨🇳CHT7, google, 🇭🇰GIA2, 🇭🇭🇰CMI4, 🇭🇰IPLC32
+Proxy = select, 🇨🇳CHT7, google, 🇭🇰GIA2, 🇭🇰CMI4, 🇭🇰IPLC32
 油管 = select, Proxy, google, 🇺🇸GIA6, 🇺🇸BGP2
 tw = select, Proxy, 🇨🇳CHT7
 game = select, DIRECT, Proxy, 🇭🇰IPLC32, 🇭🇰IPLC32
