--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -27,7 +27,8 @@ AD = select, REJECT
 
 [Rule]
 # SYSTEM直连规则
-RULE-SET,SYSTEM,DIRECT
+RULE-SET,System,DIRECT
+RULE-SET,LAN,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
 
 //Siri
