--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -27,7 +27,7 @@ AD = select, REJECT
 
 [Rule]
 # SYSTEM直连规则
-RULE-SET,System,DIRECT
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/system.list,DIRECT
 RULE-SET,LAN,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
 
